test/message/vm_display_syntax_error.out
beginning
foo.vm:1
var 4;
    ^
SyntaxError: Unexpected number
    at new Script (node:vm:*)
    at createScript (node:vm:*)
    at Object.runInThisContext (node:vm:*)
    at Object.<anonymous> (*test*message*vm_display_syntax_error.js:*)
test.vm:1
var 5;
    ^
SyntaxError: Unexpected number
    at new Script (node:vm:*)
    at createScript (node:vm:*)
    at Object.runInThisContext (node:vm:*)
    at Object.<anonymous> (*test*message*vm_display_syntax_error.js:*)

Node.js *
